# ProjectStar

./: Field_Services_System_Design_Spec.md  Field_Services_UAT_Manual_20250618.docx  Gap_Analysis_Report.md  package-lock.json  package.json  path_to_new_file  pyproject.toml  schedule of works.docx  setup.py  setup.py.bak  temp_setup.py
